added google font to title

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Responsive Portfolio</title>
+    <title>Aleks' Bootstrap Responsive Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="Assets/CSS/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -34,6 +36,11 @@
 
     <main class="container">
         <h1>About Me</h1>
+        <p>
+            My name is Aleks Kimball-Moreno and I am a student in the Full Stack Web Development boot camp at the
+            University of Washington. I have a BA in Political Science from Central Washington University and previously
+            worked in the automotive industry.
+        </p>
     </main>
     <footer class="footer">
         <p class="text-center text-muted">
