added background image to index.html file

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         </div>
     </nav>
 
+    <img id="wallpaper" src="https://wallpapercave.com/wp/wp4047726.jpg" alt="dark-ocean-waves">
+
     <main class="container">
         <h1>About Me</h1>
         <p>
@@ -44,9 +46,7 @@
     </main>
     <footer class="footer">
         <p class="text-center text-muted">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla ullam consequuntur minus! Perferendis
-            corporis a nostrum possimus similique consequatur! Explicabo veritatis velit voluptatum laborum molestias
-            fugiat dolorum tenetur culpa nulla!
+            Copyright 2020
         </p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
