added background image to other html files

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,9 @@
         </div>
     </nav>
 
+    <img id="wallpaper" src="https://wallpapercave.com/wp/wp4047726.jpg" alt="dark-ocean-waves">
     <main class="container">
+
         <h1>Portfolio</h1>
     </main>
     <footer class="footer">
