--- a/contacts.html
+++ b/contacts.html
@@ -32,6 +32,8 @@
         </div>
     </nav>
 
+    <img id="wallpaper" src="https://wallpapercave.com/wp/wp4047726.jpg" alt="dark-ocean-waves">
+
     <main class="container">
         <h1>Contacts</h1>
     </main>
