removed dead css code and added jumbotron to html file

--- a/contacts.html
+++ b/contacts.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="Assets/CSS/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -39,9 +41,7 @@
     </main>
     <footer class="footer">
         <p class="text-center text-muted">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla ullam consequuntur minus! Perferendis
-            corporis a nostrum possimus similique consequatur! Explicabo veritatis velit voluptatum laborum molestias
-            fugiat dolorum tenetur culpa nulla!
+            Copyright 2020
         </p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
