--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" id="logo-name" href="#">Aleks Kimball-Moreno</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        <button class="navbar-toggler navbar-right" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,21 +34,36 @@
         </div>
     </nav>
 
-    <img id="wallpaper" src="https://wallpapercave.com/wp/wp4047726.jpg" alt="dark-ocean-waves">
-
     <main class="container">
-        <h1>About Me</h1>
-        <p>
-            My name is Aleks Kimball-Moreno and I am a student in the Full Stack Web Development boot camp at the
-            University of Washington. I have a BA in Political Science from Central Washington University and previously
-            worked in the automotive industry.
-        </p>
+        <div class="row">
+            <div class="col-8">
+                <div class="jumbotron">
+                    <h1 class="display-4">About Me</h1>
+                    <hr class="my-4">
+                    <p>My name is Aleks Kimball-Moreno and I am a student in the Full Stack Web Development boot camp at
+                        the
+                        University of Washington. I have a BA in Political Science from Central Washington University
+                        and
+                        previously
+                        worked in the automotive industry. I live in Seattle and have been a Washington Resident my
+                        entire life.
+                    </p>
+                    <p>
+                        In my free time I enjoy a number of hobbies and activities. I've been a DJ for nearly 10 years.
+                        I love to go hiking, backpacking, camping, off-roading in my Subaru, snowboarding, mountain
+                        biking, going to music festivals, and traveling internationally.
+                    </p>
+                </div>
+            </div>
+        </div>
     </main>
+
     <footer class="footer">
         <p class="text-center text-muted">
             Copyright 2020
         </p>
     </footer>
+    <img class="wallpaper" src="https://wallpapercave.com/wp/wp4047726.jpg" alt="dark-ocean-waves">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
@@ -58,7 +73,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-
 </body>
 
 </html>
