made footer relative in css file

--- a/contacts.html
+++ b/contacts.html
@@ -41,7 +41,7 @@
     </main>
     <footer class="footer">
         <p class="text-center text-muted">
-            Copyright 2020
+            Copyright
         </p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
