moved nav bar buttons to the right

--- a/index.html
+++ b/index.html
@@ -19,18 +19,20 @@
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">About Me</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contacts.html">Contact</a>
-                </li>
-            </ul>
+        <div class="container">
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacts.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
     <img class="wallpaper" src="https://wallpapercave.com/wp/wp4047726.jpg" alt="dark-ocean-waves">
@@ -40,16 +42,20 @@
                 <div class="jumbotron">
                     <h1 class="display-4">About Me</h1>
                     <hr class="my-4">
-                    <p>My name is Aleks Kimball-Moreno and I am a student in the Full Stack Web Development boot camp at
+                    <p>My name is Aleks Kimball-Moreno and I am a student in the Full Stack Web Development boot
+                        camp at
                         the
-                        University of Washington. I have a BA in Political Science from Central Washington University
+                        University of Washington. I have a BA in Political Science from Central Washington
+                        University
                         and
                         previously
-                        worked in the automotive industry. I live in Seattle and have been a Washington Resident my
+                        worked in the automotive industry. I currently live in Seattle and have been a Washington
+                        Resident my
                         entire life.
                     </p>
                     <p>
-                        In my free time I enjoy a number of hobbies and activities. I've been a DJ for nearly 10 years.
+                        I enjoy a number of hobbies and activities in my free time. I've been a DJ for nearly 10
+                        years.
                         I love to go hiking, backpacking, camping, off-roading in my Subaru, snowboarding, mountain
                         biking, going to music festivals, and traveling internationally.
                     </p>
@@ -57,7 +63,6 @@
             </div>
         </div>
     </main>
-
     <footer class="footer">
         <p class="text-center text-muted">
             Copyright 2020
