added image to index.html file

--- a/index.html
+++ b/index.html
@@ -42,23 +42,32 @@
                 <div class="jumbotron">
                     <h1 class="display-4">About Me</h1>
                     <hr class="my-4">
-                    <p>My name is Aleks Kimball-Moreno and I am a student in the Full Stack Web Development boot
-                        camp at
-                        the
-                        University of Washington. I have a BA in Political Science from Central Washington
-                        University
-                        and
-                        previously
-                        worked in the automotive industry. I currently live in Seattle and have been a Washington
-                        Resident my
-                        entire life.
-                    </p>
-                    <p>
-                        I enjoy a number of hobbies and activities in my free time. I've been a DJ for nearly 10
-                        years.
-                        I love to go hiking, backpacking, camping, off-roading in my Subaru, snowboarding, mountain
-                        biking, going to music festivals, and traveling internationally.
-                    </p>
+                    <div class="row">
+                        <img src="https://placekitten.com/200/300" class="img-fluid" alt="Responsive image">
+                        <div class="col-6">
+                            <p>
+                                My name is Aleks Kimball-Moreno and I am a student in the Full Stack Web Development
+                                boot
+                                camp at
+                                the
+                                University of Washington. I have a BA in Political Science from Central Washington
+                                University
+                                and
+                                previously
+                                worked in the automotive industry. I currently live in Seattle and have been a
+                                Washington
+                                Resident my
+                                entire life.
+                            </p>
+                            <p>
+                                I enjoy a number of hobbies and activities in my free time. I've been a DJ for nearly 10
+                                years.
+                                I love to go hiking, backpacking, camping, off-roading in my Subaru, snowboarding,
+                                mountain
+                                biking, going to music festivals, and traveling internationally.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
