--- a/index.html
+++ b/index.html
@@ -35,16 +35,20 @@
             </div>
         </div>
     </nav>
-    <img class="wallpaper" src="https://wallpapercave.com/wp/wp4047726.jpg" alt="dark-ocean-waves">
-    <main class="container">
+    <!-- <img class="wallpaper" src="https://wallpapercave.com/wp/wp4047726.jpg" alt="dark-ocean-waves"> -->
+    <main class="container wallpaper">
         <div class="row">
-            <div class="col-8">
-                <div class="jumbotron">
-                    <h1 class="display-4">About Me</h1>
+            <div class="col-md-8">
+                <div class="jumbotron m-2 overflow-auto">
+                    <h1 class="display-4">
+                        About Me
+                    </h1>
                     <hr class="my-4">
                     <div class="row">
-                        <img src="https://placekitten.com/200/300" class="img-fluid" alt="Responsive image">
-                        <div class="col-6">
+                        <div class="col-md-8 col-lg-10">
+                            <img src="https://placekitten.com/500/600" class="img-fluid img-responsive"
+                                alt="Responsive image">
+
                             <p>
                                 My name is Aleks Kimball-Moreno and I am a student in the Full Stack Web Development
                                 boot
