--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Responsive Portfolio</title>
+    <title>Aleks K.M.</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="Assets/CSS/style.css">
@@ -14,7 +14,9 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" id="logo-name" href="#">Aleks Kimball-Moreno</a>
+        <a class="navbar-brand" id="logo-name" href="#">
+            Aleks Kimball-Moreno
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,13 +24,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">About Me</a>
+                    <a class="nav-link" href="contacts.html">
+                        Contact
+                    </a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    <a class="nav-link" href="portfolio.html">
+                        Portfolio
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contacts.html">Contact</a>
+                    <a class="nav-link" href="index.html">
+                        About Me
+                    </a>
                 </li>
             </ul>
         </div>
@@ -41,7 +49,7 @@
     </main>
     <footer class="footer">
         <p class="text-center text-muted">
-            Copyright 2020
+            &copy; Copyright
         </p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
