--- a/contacts.html
+++ b/contacts.html
@@ -42,10 +42,18 @@
         </div>
     </nav>
 
-    <img id="wallpaper" src="https://wallpapercave.com/wp/wp4047726.jpg" alt="dark-ocean-waves">
-
     <main class="container">
-        <h1>Contacts</h1>
+        <div class="jumbotron">
+            <h1 class="display-4">Hello, world!</h1>
+            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention
+                to featured content or information.</p>
+            <hr class="my-4">
+            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            </p>
+        </div>
+        <h1>Contact</h1>
     </main>
     <footer class="footer">
         <p class="text-center text-muted">
