added contact box to contact.html

--- a/contacts.html
+++ b/contacts.html
@@ -43,17 +43,35 @@
     </nav>
 
     <main class="container">
-        <div class="jumbotron">
-            <h1 class="display-4">Hello, world!</h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention
-                to featured content or information.</p>
-            <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-            </p>
+        <div class="row-6">
+            <div class="jumbotron">
+                <h1 class="display-4">Contact</h1>
+                <hr class="my-4">
+                <p>
+                    Name
+                </p>
+                <p>
+                    <input type="text">
+                </p>
+                <p>
+                    Email
+                </p>
+                <p>
+                    <input type="text">
+                </p>
+                <p>
+                    Message
+                </p>
+                <p>
+                    <input type="text">
+                </p>
+                <br>
+                <br>
+                <p class="lead">
+                    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                </p>
+            </div>
         </div>
-        <h1>Contact</h1>
     </main>
     <footer class="footer">
         <p class="text-center text-muted">
