resized about me section image and removed code redundancies

--- a/contacts.html
+++ b/contacts.html
@@ -42,10 +42,12 @@
         </div>
     </nav>
 
-    <main class="container">
+    <main class="container wallpaper">
         <div class="row-6">
             <div class="jumbotron">
-                <h1 class="display-4">Contact</h1>
+                <h1 class="display-4">
+                    Contact
+                </h1>
                 <hr class="my-4">
                 <p>
                     Name
@@ -68,7 +70,7 @@
                 <br>
                 <br>
                 <p class="lead">
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                    <a class="btn btn-primary btn-lg" href="#" role="button">Submit</a>
                 </p>
             </div>
         </div>
