--- a/index.html
+++ b/index.html
@@ -21,41 +21,39 @@
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="container">
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="contacts.html">
-                            Contact
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">
-                            Portfolio
-                        </a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">
-                            About Me
-                        </a>
-                    </li>
-                </ul>
-            </div>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="contacts.html">
+                        Contact
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">
+                        Portfolio
+                    </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">
+                        About Me
+                    </a>
+                </li>
+            </ul>
+        </div>
         </div>
     </nav>
     <!-- <img class="wallpaper" src="https://wallpapercave.com/wp/wp4047726.jpg" alt="dark-ocean-waves"> -->
     <main class="container wallpaper">
         <div class="row">
             <div class="col-md-8">
-                <div class="jumbotron m-2 overflow-auto">
+                <div class="jumbotron">
                     <h1 class="display-4">
                         About Me
                     </h1>
                     <hr class="my-4">
                     <div class="row">
                         <div class="col-md-8 col-lg-10">
-                            <img src="https://placekitten.com/500/600" class="img-fluid img-responsive"
-                                alt="Responsive image">
+                            <img src="https://placekitten.com/500/600" class="img-responsive" alt="Responsive image">
                             <p>
                                 My name is Aleks Kimball-Moreno and I am a student in the Full Stack Web Development
                                 boot
@@ -81,14 +79,12 @@
                     </div>
                 </div>
             </div>
-        </div>
     </main>
     <footer class="footer">
         <p class="text-center text-muted">
             &copy; Copyright
         </p>
     </footer>
-
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
