--- a/contacts.html
+++ b/contacts.html
@@ -43,35 +43,39 @@
     </nav>
 
     <main class="container wallpaper">
-        <div class="row-6">
-            <div class="jumbotron">
-                <h1 class="display-4">
-                    Contact
-                </h1>
-                <hr class="my-4">
-                <p>
-                    Name
-                </p>
-                <p>
-                    <input type="text">
-                </p>
-                <p>
-                    Email
-                </p>
-                <p>
-                    <input type="text">
-                </p>
-                <p>
-                    Message
-                </p>
-                <p>
-                    <input type="text">
-                </p>
-                <br>
-                <br>
-                <p class="lead">
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Submit</a>
-                </p>
+        <div class="row">
+            <div class="col-md-8">
+                <div class="jumbotron">
+                    <h1 class="display-4">
+                        Contact
+                    </h1>
+                    <div class="col-8">
+                        <hr class="my-4">
+                        <p>
+                            Name
+                        </p>
+                        <p>
+                            <input type="text form-control-inline" placeholder="Name">
+                        </p>
+                        <p>
+                            Email
+                        </p>
+                        <p>
+                            <input type="text" placeholder="Email">
+                        </p>
+                        <p>
+                            Message
+                        </p>
+                        <p>
+                            <input type="text" placeholder="Message">
+                        </p>
+                    </div>
+                    <br>
+                    <br>
+                    <p class="lead">
+                        <a class="btn btn-primary btn-lg" href="#" role="button">Submit</a>
+                    </p>
+                </div>
             </div>
         </div>
     </main>
