--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
                     </h1>
                     <hr class="my-4">
                     <div class="row">
-                        <div class="col-md-8 col-lg-10">
-                            <img src="https://placekitten.com/500/600" class="img-responsive" alt="Responsive image">
+                        <div class="col-8 col-10">
+                            <img src=https://i.ibb.co/pjDhvkC/IMG-20200121-161722-203.jpg/500/600"
+                                class="img-responsive" alt="Responsive image">
                             <p>
                                 My name is Aleks Kimball-Moreno and I am a student in the Full Stack Web Development
                                 boot
@@ -69,7 +70,8 @@
                                 entire life.
                             </p>
                             <p>
-                                I enjoy a number of hobbies and activities in my free time. I've been a DJ for nearly 10
+                                I enjoy a number of hobbies and activities in my free time. I've been a DJ for
+                                nearly 10
                                 years.
                                 I love to go hiking, backpacking, camping, off-roading in my Subaru, snowboarding,
                                 mountain
