--- a/portfolio.html
+++ b/portfolio.html
@@ -41,11 +41,20 @@
             </ul>
         </div>
     </nav>
-
-    <img id="wallpaper" src="https://wallpapercave.com/wp/wp4047726.jpg" alt="dark-ocean-waves">
     <main class="container">
-
-        <h1>Portfolio</h1>
+        <section class="row">
+            <div class="jumbotron">
+                <h1 class="display-4">Portfolio</h1>
+                <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra
+                    attention to featured content or information.</p>
+                <hr class="my-4">
+                <p>It uses utility classes for typography and spacing to space content out within the larger container.
+                </p>
+                <p class="lead">
+                    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                </p>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <p class="text-center text-muted">
