--- a/portfolio.html
+++ b/portfolio.html
@@ -43,17 +43,34 @@
     </nav>
     <main class="container">
         <section class="row">
-            <div class="jumbotron">
-                <h1 class="display-4">Portfolio</h1>
-                <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra
-                    attention to featured content or information.</p>
-                <hr class="my-4">
-                <p>It uses utility classes for typography and spacing to space content out within the larger container.
-                </p>
-                <p class="lead">
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-                </p>
-            </div>
+            <div class="col-md-4">
+                <div class="jumbotron">
+                    <h1 class="display-4">
+                        Portfolio
+                    </h1>
+                    <hr class="my-4">
+                    <div class="row">
+                        <div class="col-6">
+                            <img src="https://placekitten.com/350/350" alt="..." class="img-thumbnail">
+                        </div>
+                        <div class="col-6">
+                            <img src="https://placekitten.com/350/350" alt="..." class="img-thumbnail">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <img src="https://placekitten.com/350/350" alt="..." class="img-thumbnail">
+                        </div>
+                        <div class="col-6">
+                            <img src="https://placekitten.com/350/350" alt="..." class="img-thumbnail">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <img src="https://placekitten.com/350/350" alt="..." class="img-thumbnail">
+                        </div>
+                    </div>
+                </div>
         </section>
     </main>
     <footer class="footer">
