added hyperlinks to portfolio.html thumbnails

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <p>
                                 I enjoy a number of hobbies and activities in my free time. I've been a DJ for
                                 nearly 10
-                                years.
+                                years and have played at venues all over the city.
                                 I love to go hiking, backpacking, camping, off-roading in my Subaru, snowboarding,
                                 mountain
                                 biking, going to music festivals, and traveling internationally.
