updated font family from google fonts

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,9 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="Assets/CSS/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Cinzel+Decorative:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -41,7 +43,7 @@
             </ul>
         </div>
     </nav>
-    <main class="container">
+    <main class="container flex-container">
         <section class="row">
             <div class="col-md-4">
                 <div class="jumbotron">
@@ -62,12 +64,12 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-6 float-md-left">
                             <a href="#">
                                 <img src="https://placekitten.com/350/350" alt="..." class="img-thumbnail">
                             </a>
                         </div>
-                        <div class="col-6">
+                        <div class="col-6 float-md-left">
                             <a href="#">
                                 <img src="https://placekitten.com/350/350" alt="..." class="img-thumbnail">
                             </a>
