--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,9 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="Assets/CSS/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Cinzel+Decorative:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -73,7 +75,9 @@
                     <br>
                     <br>
                     <p class="lead">
-                        <a class="btn btn-primary btn-lg" href="#" role="button">Submit</a>
+                        <a class="btn btn-primary btn-lg" href="#" role="button">
+                            Submit
+                        </a>
                     </p>
                 </div>
             </div>
