--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                             <img src=https://i.ibb.co/pjDhvkC/IMG-20200121-161722-203.jpg/500/600"
                                 class="img-responsive" alt="Responsive image">
                             <p>
-                                My name is Aleks Kimball-Moreno and I am a student in the Full Stack Web Development
+                                My name is Aleks Kimball-Moreno and I am currently a student in the Full Stack Web
+                                Development
                                 boot
                                 camp at
                                 the
@@ -66,10 +67,8 @@
                                 University
                                 and
                                 previously
-                                worked in the automotive industry. I currently live in Seattle and have been a
-                                Washington
-                                Resident my
-                                entire life.
+                                worked in the automotive industry. I currently live in Seattle, WA and am developing my
+                                skills in HTML, CSS, Bootstrap, and more.
                             </p>
                             <p>
                                 I enjoy a number of hobbies and activities in my free time. I've been a DJ for
