--- a/portfolio.html
+++ b/portfolio.html
@@ -54,31 +54,31 @@
                     <div class="row">
                         <div class="col-6">
                             <a href="#">
-                                <img src="https://placekitten.com/350/350" alt="..." class="img-thumbnail">
+                                <img src="http://lorempixel.com/350/350" alt="..." class="img-thumbnail">
                             </a>
                         </div>
                         <div class="col-6">
                             <a href="#">
-                                <img src="https://placekitten.com/350/350" alt="..." class="img-thumbnail">
+                                <img src="http://lorempixel.com/350/350" alt="..." class="img-thumbnail">
                             </a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-6 float-md-left">
                             <a href="#">
-                                <img src="https://placekitten.com/350/350" alt="..." class="img-thumbnail">
+                                <img src="http://lorempixel.com/350/350" alt="..." class="img-thumbnail">
                             </a>
                         </div>
                         <div class="col-6 float-md-left">
                             <a href="#">
-                                <img src="https://placekitten.com/350/350" alt="..." class="img-thumbnail">
+                                <img src="http://lorempixel.com/350/350" alt="..." class="img-thumbnail">
                             </a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-6">
                             <a href="#">
-                                <img src="https://placekitten.com/350/350" alt="..." class="img-thumbnail">
+                                <img src="http://lorempixel.com/350/350" alt="..." class="img-thumbnail">
                             </a>
                         </div>
                     </div>
