fixed input fields on contacts.html file

--- a/index.html
+++ b/index.html
@@ -42,13 +42,12 @@
                 </li>
             </ul>
         </div>
-        </div>
     </nav>
-    <!-- <img class="wallpaper" src="https://wallpapercave.com/wp/wp4047726.jpg" alt="dark-ocean-waves"> -->
+
     <main class="container wallpaper">
         <div class="row">
             <div class="col-md-8">
-                <div class="jumbotron">
+                <section class="jumbotron">
                     <h1 class="display-4">
                         About Me
                     </h1>
@@ -80,7 +79,7 @@
                             </p>
                         </div>
                     </div>
-                </div>
+                </section>
             </div>
     </main>
     <footer class="footer">
