--- a/portfolio.html
+++ b/portfolio.html
@@ -52,31 +52,31 @@
                     </h1>
                     <hr class="my-4">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-md">
                             <a href="#">
                                 <img src="http://lorempixel.com/350/350" alt="..." class="img-thumbnail">
                             </a>
                         </div>
-                        <div class="col-6">
-                            <a href="#">
-                                <img src="http://lorempixel.com/350/350" alt="..." class="img-thumbnail">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-6 float-md-left">
-                            <a href="#">
-                                <img src="http://lorempixel.com/350/350" alt="..." class="img-thumbnail">
-                            </a>
-                        </div>
-                        <div class="col-6 float-md-left">
+                        <div class="col-md">
                             <a href="#">
                                 <img src="http://lorempixel.com/350/350" alt="..." class="img-thumbnail">
                             </a>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-md float-md-left">
+                            <a href="#">
+                                <img src="http://lorempixel.com/350/350" alt="..." class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-md float-md-left">
+                            <a href="#">
+                                <img src="http://lorempixel.com/350/350" alt="..." class="img-thumbnail">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 float-md-left">
                             <a href="#">
                                 <img src="http://lorempixel.com/350/350" alt="..." class="img-thumbnail">
                             </a>
