changed jumbotron class from div to section

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
     <main class="container flex-container">
         <section class="row">
             <div class="col-md-4">
-                <div class="jumbotron">
+                <section class="jumbotron">
                     <h1 class="display-4">
                         Portfolio
                     </h1>
@@ -82,7 +82,7 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </section>
         </section>
     </main>
     <footer class="footer">
