--- a/contacts.html
+++ b/contacts.html
@@ -47,12 +47,13 @@
     <main class="container wallpaper">
         <div class="row">
             <div class="col-md-8">
-                <div class="jumbotron">
+                <section class="jumbotron">
                     <h1 class="display-4">
                         Contact
                     </h1>
                     <div class="col-8">
                         <hr class="my-4">
+                        
                         <form>
                             <div class="form-group">
                                 <label for="name">Name</label>
@@ -74,7 +75,7 @@
                             </a>
                         </p>
                     </div>
-                </div>
+                </section>
             </div>
         </div>
     </main>
