added github and linkedin hyperlinks to contact page

--- a/contacts.html
+++ b/contacts.html
@@ -53,18 +53,23 @@
                     </h1>
                     <div class="col-8">
                         <hr class="my-4">
-                        
                         <form>
                             <div class="form-group">
-                                <label for="name">Name</label>
+                                <label for="name">
+                                    Name
+                                </label>
                                 <input type="text" class="form-control" placeholder="Name" id="usr">
                             </div>
                             <div class="form-group">
-                                <label for="email">Email</label>
+                                <label for="email">
+                                    Email
+                                </label>
                                 <input type="email" class="form-control" placeholder="Email" id="email">
                             </div>
                             <div class="form-group">
-                                <label for="comment">Send A Message</label>
+                                <label for="message">
+                                    Send A Message
+                                </label>
                                 <textarea class="form-control" rows="3" placeholder="How can I help you?"
                                     id="comment"></textarea>
                             </div>
@@ -73,6 +78,9 @@
                             <a class="btn btn-primary btn-lg" href="#" role="button">
                                 Submit
                             </a>
+                            <a class="socials" href="https://github.com/vantango">GitHub</a>
+                            <a class="socials"
+                                href="https://www.linkedin.com/in/aleks-kimball-moreno-a7026850/">LinkedIn</a>
                         </p>
                     </div>
                 </section>
