moved social media hyperlinks to footer on all html files

--- a/contacts.html
+++ b/contacts.html
@@ -78,9 +78,9 @@
                             <a class="btn btn-primary btn-lg" href="#" role="button">
                                 Submit
                             </a>
-                            <a class="socials" href="https://github.com/vantango">GitHub</a>
+                            <!-- <a class="socials" href="https://github.com/vantango">GitHub</a>
                             <a class="socials"
-                                href="https://www.linkedin.com/in/aleks-kimball-moreno-a7026850/">LinkedIn</a>
+                                href="https://www.linkedin.com/in/aleks-kimball-moreno-a7026850/">LinkedIn</a> -->
                         </p>
                     </div>
                 </section>
@@ -89,7 +89,10 @@
     </main>
     <footer class="footer">
         <p class="text-center text-muted">
+            <a class="socials" href="https://github.com/vantango" target="_blank">GitHub</a>
             &copy; Copyright
+            <a class="socials" href="https://www.linkedin.com/in/aleks-kimball-moreno-a7026850/"
+                target="_blank">LinkedIn</a>
         </p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
