--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
     </main>
     <footer class="footer">
         <p class="text-center text-muted">
+            <a class="socials" href="https://github.com/vantango" target="_blank">GitHub</a>
             &copy; Copyright
+            <a class="socials" href="https://www.linkedin.com/in/aleks-kimball-moreno-a7026850/"
+                target="_blank">LinkedIn</a>
         </p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
