--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
         </div>
     </nav>
     <main class="container flex-container">
-        <section class="row">
+        <div class="row">
             <div class="col-md-4">
                 <section class="jumbotron">
                     <h1 class="display-4">
@@ -83,11 +83,14 @@
                         </div>
                     </div>
                 </section>
-        </section>
+            </div>
     </main>
     <footer class="footer">
         <p class="text-center text-muted">
+            <a class="socials" href="https://github.com/vantango" target="_blank">GitHub</a>
             &copy; Copyright
+            <a class="socials" href="https://www.linkedin.com/in/aleks-kimball-moreno-a7026850/"
+                target="_blank">LinkedIn</a>
         </p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
