added wallpaper class to main in portfolio.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </nav>
 
     <main class="container wallpaper">
-        <div class="row">
+        <section class="row">
             <div class="col-md-8">
                 <section class="jumbotron">
                     <h1 class="display-4">
@@ -81,6 +81,7 @@
                     </div>
                 </section>
             </div>
+        </section>
     </main>
     <footer class="footer">
         <p class="text-center text-muted">
