--- a/portfolio.html
+++ b/portfolio.html
@@ -43,8 +43,8 @@
             </ul>
         </div>
     </nav>
-    <main class="container flex-container">
-        <div class="row">
+    <main class="container wallpaper">
+        <section class="row">
             <div class="col-md-4">
                 <section class="jumbotron">
                     <h1 class="display-4">
@@ -84,6 +84,7 @@
                     </div>
                 </section>
             </div>
+        </section>
     </main>
     <footer class="footer">
         <p class="text-center text-muted">
