removed wallpaper from main container class for corrected responsiveness

--- a/contacts.html
+++ b/contacts.html
@@ -44,7 +44,7 @@
         </div>
     </nav>
 
-    <main class="container wallpaper">
+    <main class="container">
         <section class="row">
             <div class="col-md-8">
                 <section class="jumbotron">
@@ -78,9 +78,6 @@
                             <a class="btn btn-primary btn-lg" href="#" role="button">
                                 Submit
                             </a>
-                            <!-- <a class="socials" href="https://github.com/vantango">GitHub</a>
-                            <a class="socials"
-                                href="https://www.linkedin.com/in/aleks-kimball-moreno-a7026850/">LinkedIn</a> -->
                         </p>
                     </div>
                 </section>
