--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </nav>
 
-    <main class="container wallpaper">
+    <main class="container">
         <section class="row">
             <div class="col-md-8">
                 <section class="jumbotron">
