--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,8 @@
             </ul>
         </div>
     </nav>
-    <main class="container wallpaper">
+
+    <main class="container">
         <section class="row">
             <div class="col-md-4">
                 <section class="jumbotron">
