--- a/portfolio.html
+++ b/portfolio.html
@@ -55,31 +55,36 @@
                     <div class="row">
                         <div class="col-md">
                             <a href="#">
-                                <img src="http://lorempixel.com/350/350" alt="..." class="img-thumbnail">
+                                <img src="http://lorempixel.com/350/350" alt="random-portfolio-image"
+                                    class="img-thumbnail">
                             </a>
                         </div>
                         <div class="col-md">
                             <a href="#">
-                                <img src="http://lorempixel.com/350/350" alt="..." class="img-thumbnail">
+                                <img src="http://lorempixel.com/350/350" alt="random-portfolio-image"
+                                    class="img-thumbnail">
                             </a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md float-md-left">
                             <a href="#">
-                                <img src="http://lorempixel.com/350/350" alt="..." class="img-thumbnail">
+                                <img src="http://lorempixel.com/350/350" alt="random-portfolio-image"
+                                    class="img-thumbnail">
                             </a>
                         </div>
                         <div class="col-md float-md-left">
                             <a href="#">
-                                <img src="http://lorempixel.com/350/350" alt="..." class="img-thumbnail">
+                                <img src="http://lorempixel.com/350/350" alt="random-portfolio-image"
+                                    class="img-thumbnail">
                             </a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6 float-md-left">
                             <a href="#">
-                                <img src="http://lorempixel.com/350/350" alt="..." class="img-thumbnail">
+                                <img src="http://lorempixel.com/350/350" alt="random-portfolio-image"
+                                    class="img-thumbnail">
                             </a>
                         </div>
                     </div>
