--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="row">
                         <div class="col-8 col-10">
                             <img src=https://i.ibb.co/pjDhvkC/IMG-20200121-161722-203.jpg/500/600"
-                                class="img-responsive" alt="Responsive image">
+                                class="img-responsive" alt="picture-of-aleks">
                             <p>
                                 My name is Aleks Kimball-Moreno and I am currently a student in the Full Stack Web
                                 Development
