--- a/contacts.html
+++ b/contacts.html
@@ -18,11 +18,11 @@
     <div class="wallpaper">
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" id="logo-name" href="#">
-                Aleks Kimball-Moreno
+                Aleksandr Kimball-Moreno
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon navbar-dark"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
@@ -57,7 +57,7 @@
         </nav>
 
         <main class="container">
-            <section class="row">
+            <div class="row">
                 <div class="col-md-8">
                     <section class="jumbotron">
                         <h1 class="display-4">
@@ -94,15 +94,12 @@
                         </div>
                     </section>
                 </div>
-            </section>
+            </div>
         </main>
     </div>
     <footer class="footer">
         <p class="text-center text-muted">
-            <!-- <a class="socials" href="https://github.com/vantango" target="_blank">GitHub</a> -->
             &copy; Copyright 2021
-            <!-- <a class="socials" href="https://www.linkedin.com/in/aleks-kimball-moreno-a7026850/"
-                target="_blank">LinkedIn</a> -->
         </p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
