--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <div class="wallpaper">
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" id="logo-name" href="#">
-                Aleks Kimball-Moreno
+                Aleksandr Kimball-Moreno
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon navbar-dark"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
@@ -57,8 +57,8 @@
         </nav>
 
         <main class="container">
-            <section class="row">
-                <div class="col-md-8">
+            <div class="row">
+                <div class="col-md-8 col-sm">
                     <section class="jumbotron">
                         <h1 class="display-4">
                             About Me
@@ -69,17 +69,6 @@
                                 <img src="https://media-exp1.licdn.com/dms/image/C5603AQFYRkBfcnElgA/profile-displayphoto-shrink_200_200/0/1609885611907?e=1615420800&v=beta&t=QDQ5EV3UPe-2TB8MKyEWHY_BfjubdWGkFlj4wuI1mG4"
                                     class="img-responsive" alt="picture-of-aleks">
                                 <p>
-                                    <!-- I am currently a student in the Full Stack Web
-                                Development
-                                boot
-                                camp at
-                                the
-                                University of Washington. I have a BA in Political Science from Central Washington
-                                University
-                                and
-                                previously
-                                worked in the automotive industry. I currently live in Seattle, WA and am developing my
-                                skills in HTML, CSS, Bootstrap, and more. -->
                                     I am an aspiring full stack web developer currently enrolled in the Web Development
                                     Boot
                                     Camp at University of Washington. Combining my background in the automotive industry
@@ -89,12 +78,6 @@
                                     lightweight and efficient deployments.
                                 </p>
                                 <p>
-                                    <!-- I enjoy a number of hobbies and activities in my free time. I've been a DJ for
-                                nearly 10
-                                years and have played at venues all over the city.
-                                I love to go hiking, backpacking, camping, off-roading in my Subaru, snowboarding,
-                                mountain
-                                biking, going to music festivals, and traveling internationally. -->
                                     I am a highly motivated self-starter with a
                                     proven track record in fast paced, team-focused environments. I am constantly
                                     seeking to
@@ -106,16 +89,12 @@
                         </div>
                     </section>
                 </div>
-            </section>
-
+            </div>
         </main>
     </div>
     <footer class="footer">
         <p class="text-center text-muted">
-            <!-- <a class="socials" href="https://github.com/vantango" target="_blank">GitHub</a> -->
             &copy; Copyright 2021
-            <!-- <a class="socials" href="https://www.linkedin.com/in/aleks-kimball-moreno-a7026850/"
-                target="_blank">LinkedIn</a> -->
         </p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
