--- a/portfolio.html
+++ b/portfolio.html
@@ -18,11 +18,11 @@
     <div class="wallpaper">
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" id="logo-name" href="#">
-                Aleks Kimball-Moreno
+                Aleksandr Kimball-Moreno
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon navbar-dark"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
@@ -56,61 +56,46 @@
             </div>
         </nav>
 
-        <main class="container">
-            <section class="row">
-                <div class="col-md-4">
-                    <section class="jumbotron">
+        <main>
+            <div class="row">
+                <div>
+                    <section class="jumbotron" id="portfolio">
                         <h1 class="display-4">
                             Portfolio
                         </h1>
                         <hr class="my-4">
                         <div class="row">
-                            <div class="col-md">
-                                <a href="#">
-                                    <img src="http://lorempixel.com/350/350" alt="random-portfolio-image"
-                                        class="img-thumbnail">
+                            <div class="col-lg-4 col-sm-6">
+                                <h2 class=img-caption>Park Sky</h2>
+                                <a href="https://vantango.github.io/uw-project1-parksky-app/" target="_blank">
+                                    <img src="
+                                    https://github.com/vantango/uw-project1-parksky-app/raw/development/assets/img/screencapture.png?raw=true"
+                                        alt="parksky-app-image" class="img-thumbnail">
                                 </a>
                             </div>
-                            <div class="col-md">
-                                <a href="#">
-                                    <img src="http://lorempixel.com/350/350" alt="random-portfolio-image"
-                                        class="img-thumbnail">
+                            <div class="col-lg-4 col-sm-6">
+                                <h2 class=img-caption>Weather Dashboard</h2>
+                                <a href="https://vantango.github.io/weather-dashboard/" target="_blank">
+                                    <img src="https://github.com/vantango/weather-dashboard/raw/main/images/weather-dashboard.png?raw=true"
+                                        alt="random-portfolio-image" class="img-thumbnail">
                                 </a>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md float-md-left">
-                                <a href="#">
-                                    <img src="http://lorempixel.com/350/350" alt="random-portfolio-image"
-                                        class="img-thumbnail">
-                                </a>
-                            </div>
-                            <div class="col-md float-md-left">
-                                <a href="#">
-                                    <img src="http://lorempixel.com/350/350" alt="random-portfolio-image"
-                                        class="img-thumbnail">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6 float-md-left">
-                                <a href="#">
-                                    <img src="http://lorempixel.com/350/350" alt="random-portfolio-image"
-                                        class="img-thumbnail">
+                            <div class="col-lg-4 col-sm-6">
+                                <h2 class=img-caption>History Quiz</h2>
+                                <a href="https://vantango.github.io/code-quiz/" target="_blank">
+                                    <img src="https://github.com/vantango/code-quiz/raw/main/images/worldhistoryquiz.PNG?raw=true"
+                                        alt="random-portfolio-image" class="img-thumbnail">
                                 </a>
                             </div>
                         </div>
                     </section>
                 </div>
-            </section>
+            </div>
         </main>
     </div>
     <footer class="footer">
         <p class="text-center text-muted">
-            <!-- <a class="socials" href="https://github.com/vantango" target="_blank">GitHub</a> -->
             &copy; Copyright 2021
-            <!-- <a class="socials" href="https://www.linkedin.com/in/aleks-kimball-moreno-a7026850/"
-                target="_blank">LinkedIn</a> -->
         </p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
