--- a/contacts.html
+++ b/contacts.html
@@ -47,6 +47,12 @@
                             LinkedIn
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href=""
+                            target="_blank">
+                            Resume
+                        </a>
+                    </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="contacts.html">
                             Contact
