correct mobile responsiveness

--- a/contacts.html
+++ b/contacts.html
@@ -48,10 +48,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"
-                            href="https://github.com/vantango/my-portfolio-v1/raw/main/Assets/Images/ALEKSANDRA_KIMBALLMORENO_Resume.PDF
-                            "
-                            download>
+                        <a class="nav-link" href="https://github.com/vantango/my-portfolio-v1/raw/main/Assets/Images/ALEKSANDRA_KIMBALLMORENO_Resume.PDF
+                            " download>
                             Resume
                         </a>
                     </li>
@@ -95,28 +93,33 @@
                                 </div>
                             </form>
                             <div class="row">
-                                <div class="col-2">
+                                <div class="col-12">
                                     <p class="lead">
                                         <a class="btn btn-primary btn-lg" href="#" role="button">
                                             Submit
                                         </a>
                                     </p>
                                 </div>
-                                <div class="col-4">
+                            </div>
+                            <div class="row">
+                                <div class="col-12">
                                     <p>Phone: 253-797-1533</p>
                                 </div>
-                                <div class="col-6">
+                            </div>
+                            <div class="row">
+                                <div class="col-12">
                                     <p>Email: <a href="mailto:alekskimball@gmail.com">alekskimball@gmail.com</a></p>
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="row">
+                </div>
+                <!-- <div class="row">
                             
                         </div> -->
-                    </section>
-                </div>
+                </section>
             </div>
-        </main>
+    </div>
+    </main>
     </div>
     <footer class="footer">
         <p class="text-center text-muted">
