--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 
         <main class="container">
             <div class="row">
-                <div class="col-md-8 col-sm">
+                <div class="col-md-12 col-sm" id="about">
                     <section class="jumbotron">
                         <h1 class="display-4">
                             About Me
                         </h1>
                         <hr class="my-4">
                         <div class="row">
-                            <div class="col-8 col-10">
+                            <div class="col-4 col-8">
                                 <img src="https://media-exp1.licdn.com/dms/image/C5603AQFYRkBfcnElgA/profile-displayphoto-shrink_200_200/0/1609885611907?e=1615420800&v=beta&t=QDQ5EV3UPe-2TB8MKyEWHY_BfjubdWGkFlj4wuI1mG4"
                                     class="img-responsive" alt="picture-of-aleks">
                                 <p>
