--- a/portfolio.html
+++ b/portfolio.html
@@ -73,26 +73,29 @@
                         <hr class="my-4">
                         <div class="row">
                             <div class="col-lg-4 col-sm-6">
-                                <h2 class=img-caption>Park Sky</h2>
+                                <h3 class=img-caption>Park Sky</h3>
                                 <a href="https://vantango.github.io/uw-project1-parksky-app/" target="_blank">
                                     <img src="
                                     https://github.com/vantango/uw-project1-parksky-app/raw/development/assets/img/screencapture.png?raw=true"
                                         alt="parksky-app-image" class="img-thumbnail">
                                 </a>
+                                <a href="https://github.com/vantango/uw-project1-parksky-app">GitHub</a>
                             </div>
                             <div class="col-lg-4 col-sm-6">
-                                <h2 class=img-caption>Weather Dashboard</h2>
+                                <h3 class=img-caption>Weather Dashboard</h3>
                                 <a href="https://vantango.github.io/weather-dashboard/" target="_blank">
                                     <img src="https://github.com/vantango/weather-dashboard/raw/main/images/weather-dashboard.png?raw=true"
-                                        alt="random-portfolio-image" class="img-thumbnail">
+                                        alt="weather-dashboard-image" class="img-thumbnail">
                                 </a>
+                                <a href="https://github.com/vantango/weather-dashboard">GitHub</a>
                             </div>
                             <div class="col-lg-4 col-sm-6">
-                                <h2 class=img-caption>History Quiz</h2>
+                                <h3 class=img-caption>History Quiz</h3>
                                 <a href="https://vantango.github.io/code-quiz/" target="_blank">
                                     <img src="https://github.com/vantango/code-quiz/raw/main/images/worldhistoryquiz.PNG?raw=true"
-                                        alt="random-portfolio-image" class="img-thumbnail">
+                                        alt="history-quiz-image" class="img-thumbnail">
                                 </a>
+                                <a href="https://github.com/vantango/code-quiz">GitHub</a>
                             </div>
                         </div>
                     </section>
